--- a/assets/css/sass/style.scss
+++ b/assets/css/sass/style.scss
@@ -46,11 +46,11 @@
     "blocks/pagination",
     "blocks/post",
     "blocks/section",
+    "blocks/sidebar-map",
     "blocks/tables";
 
 @import
     "views/archive",
-    "views/archive-project",
     "views/content",
     "views/footer",
     "views/header",
