--- a/assets/css/sass/views/_archive.scss
+++ b/assets/css/sass/views/_archive.scss
@@ -3,20 +3,22 @@
     .no-mapbox-support & {
         opacity: 1 !important;
     }
-    .post-type-archive & {
+    .post-type-archive &,
+    .tax-archive & {
         @include transition(opacity 300ms ease-out);
     }
     .post-type-archive .is-loading &,
-    .post-type-archive-project &:not(.is-active):not(:first-child) {
+    .tax-archive &:not(.is-active):not(:first-child) {
         opacity: 0.3;
     }
-    .post-type-archive-project &.is-past {
+    .tax-archive &.is-past {
         opacity: 0.3 !important;
     }
 }
 
 .page-title  {
-    .post-type-archive & {
+    .post-type-archive &,
+    .tax-archive & {
         @include media($lg){
             max-width: 80%;
             float: left;
@@ -25,7 +27,8 @@
 }
 
 .page-header__right {
-    .post-type-archive & {
+    .post-type-archive &,
+    .tax-archive & {
         overflow: hidden;
         margin-top: 1rem;
         @include media($lg){
