adjustable blockquote sizes refs #33

--- a/assets/css/sass/base/_typography.scss
+++ b/assets/css/sass/base/_typography.scss
@@ -147,11 +147,15 @@ dfn, cite, em, i {
 
 blockquote {
 	@extend h2;
-	text-transform: none;
+	text-transform: none !important;
     margin: $leading 0 0;
 
 	p {
 		margin: 0;
+	}
+
+	.module--quote & {
+		padding: 1.5em 0;
 	}
 }
 
