--- a/assets/css/sass/views/_archive.scss
+++ b/assets/css/sass/views/_archive.scss
@@ -8,9 +8,12 @@
         @include transition(opacity 300ms ease-out);
     }
     .post-type-archive .is-loading &,
+    .tax-archive .is-loading &,
+    .post-type-archive &:not(.is-active):not(:first-child),
     .tax-archive &:not(.is-active):not(:first-child) {
         opacity: 0.3;
     }
+    .post-type-archive &.is-past,
     .tax-archive &.is-past {
         opacity: 0.3 !important;
     }
