make map js universal refs #25

--- a/assets/css/sass/style.scss
+++ b/assets/css/sass/style.scss
@@ -39,6 +39,7 @@
     "blocks/forms",
     "blocks/lists",
     "blocks/logo",
+    "blocks/maps",
     "blocks/masthead",
     "blocks/media",
     "blocks/menu",
