--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2822,7 +2822,7 @@ caption {
       -ms-flex-preferred-size: 50%; } }
 
 .site-menu-content {
-  min-height: 100%; }
+  height: 100%; }
 
 .home .featured-post {
   position: relative; }
