--- a/assets/css/sass/views/_home.scss
+++ b/assets/css/sass/views/_home.scss
@@ -13,13 +13,15 @@
 
 .home .publication.featured {
     @include media($lg) {
-            @include display(flex);
-            @include flex-wrap(wrap);
+        @include display(flex);
+        @include flex-wrap(wrap);
     }
     .content-left {
         display: none;
         @include media($lg) {
             display: block;
+            @include flex( 0 1 flex-grid(3, $grid-columns) );
+            margin-right: flex-gutter($grid-columns);
         }
         img:not(:first-child) {
             margin-top: $leading;
@@ -31,6 +33,7 @@
             padding-left: flex-gutter($grid-columns);
         }
         @include media($lg) {
+            @include flex( 0 1 flex-grid(8, $grid-columns) );
             @include display(flex);
             @include flex-wrap(wrap);
         }
