--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2853,7 +2853,15 @@ caption {
   display: none; }
   @media screen and (min-width: 1000px) {
     .home .publication.featured .content-left {
-      display: block; } }
+      display: block;
+      -webkit-box-flex: 0;
+      -moz-box-flex: 0;
+      box-flex: 0;
+      -webkit-flex: 0 1 23.23%;
+      -moz-flex: 0 1 23.23%;
+      -ms-flex: 0 1 23.23%;
+      flex: 0 1 23.23%;
+      margin-right: 2.36%; } }
   .home .publication.featured .content-left img:not(:first-child) {
     margin-top: 1rem; }
 
@@ -2864,6 +2872,13 @@ caption {
 
 @media screen and (min-width: 1000px) {
   .home .publication.featured .content-right {
+    -webkit-box-flex: 0;
+    -moz-box-flex: 0;
+    box-flex: 0;
+    -webkit-flex: 0 1 65.88%;
+    -moz-flex: 0 1 65.88%;
+    -ms-flex: 0 1 65.88%;
+    flex: 0 1 65.88%;
     display: -webkit-box;
     display: -moz-box;
     display: box;
