attempt to fix site nav nudge refs #35

--- a/assets/css/sass/base/_document.scss
+++ b/assets/css/sass/base/_document.scss
@@ -16,8 +16,8 @@ body {
 	overflow-x: hidden;
 	&.has-open-menu {
 		height: 100vh;
-		overflow: hidden;
-		padding-right: 15px;
+		// overflow: hidden;
+		// padding-right: 15px;
 	}
 	&:before{ display: none; content: 'default'; }
 	@include media($sm) {
