--- a/assets/css/sass/views/_header.scss
+++ b/assets/css/sass/views/_header.scss
@@ -57,7 +57,7 @@
         pointer-events: all;
         z-index: 10;
         opacity: 1;
-        overflow: scroll;
+        // overflow: scroll;
     }
 
     .u-container {
