--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -216,9 +216,7 @@ html {
 body {
   overflow-x: hidden; }
   body.has-open-menu {
-    height: 100vh;
-    overflow: hidden;
-    padding-right: 15px; }
+    height: 100vh; }
   body:before {
     display: none;
     content: 'default'; }
@@ -2809,8 +2807,7 @@ caption {
   body.has-open-menu .site-menu {
     pointer-events: all;
     z-index: 10;
-    opacity: 1;
-    overflow: scroll; }
+    opacity: 1; }
   .site-menu .u-container {
     min-height: 100%;
     height: 100%; }
