--- a/assets/css/sass/views/_single-project-timeline.scss
+++ b/assets/css/sass/views/_single-project-timeline.scss
@@ -86,6 +86,8 @@
 
 .project-timeline__sidebar {
     position: -webkit-sticky;
+    position: -moz-sticky;
+    position: -ms-sticky;
     position: sticky;
     top: $leading;
     overflow: auto;
