--- a/assets/css/sass/blocks/_sidebar-map.scss
+++ b/assets/css/sass/blocks/_sidebar-map.scss
@@ -5,6 +5,8 @@
         display: block;
     }
     position: -webkit-sticky;
+    position: -moz-sticky;
+    position: -ms-sticky;
     position: sticky;
     top: 0;
     height: 100vh;
