--- a/assets/css/sass/views/_footer.scss
+++ b/assets/css/sass/views/_footer.scss
@@ -33,13 +33,24 @@
     }
 }
 .footer__content {
-    @include align-items(flex-end);
     padding: 0 !important;
     .flex__item {
-        @include media($md) {
-            padding-right: 6rem;
+        padding-right: $flex-item-padding;
+        @include media($lg) {
+            padding-right: 2rem;
         }
-        flex: 1 0 flex-grid(6,$grid-columns);        
+        @include media($xl) {
+            padding-right: 5rem;
+        }
+        flex: 1 1 flex-grid(6,$grid-columns);        
+    }
+}
+
+.footer-colophon {
+    margin-top: 2rem;
+    @include align-self(flex-end);
+    @include media(585px) {
+        margin-top: 0;
     }
 }
 
