--- a/assets/css/sass/blocks/_media.scss
+++ b/assets/css/sass/blocks/_media.scss
@@ -83,6 +83,12 @@ figure {
 			background: rgba(0,0,0,0.4);
 		}
 	}
+
+	img {
+		height: auto;
+		top: 50%;
+		@include transform( translateY(-50%) );
+	}
 }
 
 .hsc-video__play {
