--- a/assets/css/sass/shared/utility/_typography.scss
+++ b/assets/css/sass/shared/utility/_typography.scss
@@ -1,14 +1,18 @@
 // Typography
 // --------------------------------------- /
-.u-font-gta-extended { font-family: $gta-extended-black; text-transform: uppercase; }
-.u-weight-light { font-weight: 300; }
-.u-weight-normal { font-weight: 400; }
-.u-weight-medium { font-weight: 500; }
-.u-weight-bold { font-weight: 700; }
-.u-caps { text-transform: uppercase; }
-.u-font-size-sm { font-size: 75%; }
-.u-font-size-lg { font-size: 125%; }
-.u-font-size-xl { font-size: 150%; }
-.u-text-left { text-align: left; }
-.u-text-center { text-align: center; }
-.u-text-right { text-align: right; }
+.u-font-gta-extended { 
+    font-family: $gta-extended-black !important; 
+    text-transform: uppercase !important; 
+}
+.u-weight-light     { font-weight: 300 !important; }
+.u-weight-normal    { font-weight: 400 !important; }
+.u-weight-medium    { font-weight: 500 !important; }
+.u-weight-bold      { font-weight: 700 !important; }
+.u-caps             { text-transform: uppercase !important; }
+.u-font-size-sm     { font-size: 75% !important; }
+.u-font-size-lg     { font-size: 125% !important; }
+.u-font-size-xl     { font-size: 150% !important; }
+.u-text-left        { text-align: left !important; }
+.u-text-center      { text-align: center !important; }
+.u-text-right       { text-align: right !important; }
+.u-underline        { text-decoration: underline !important; }
