add secondary images to publications refs #61

--- a/assets/css/sass/views/_home.scss
+++ b/assets/css/sass/views/_home.scss
@@ -11,7 +11,8 @@
     }
 }
 
-.home .publication.featured {
+.home .publication.featured,
+.publication-images {
     @include media($lg) {
         @include display(flex);
         @include flex-wrap(wrap);
