--- a/assets/css/sass/views/_footer.scss
+++ b/assets/css/sass/views/_footer.scss
@@ -1,4 +1,4 @@
-.site-footer {
+    .site-footer {
     @extend .u-py-3;
     color: white;
     background-color: $blue;
@@ -63,45 +63,52 @@
 // Subscribe
 // ----------------------------//
 .site-footer {
-    .email.form-field {
-        border-color: white;
+    .form-field {
+        cursor: pointer;
         position: relative;
         z-index: 1;
-        color: transparent;
-        cursor: pointer;
-        &:focus {
-            padding-top: 2rem;
+        &:focus, &:hover {
             color: white;
-            & + .helper {
-                opacity: 0.5;
-            }
+            border-color: white;
         }
     }
     .mc-field-group {
         position: relative;
+        margin-bottom: 1rem;
         &:hover {
             label {
                 color: black;
             }
         }
-
-        label {
-            position: absolute;
-            top: 0;
-            left: 0;
-            z-index: 0;
-            @include transition( all 300ms ease-out );
+    }
+    [type="submit"] {
+            margin: 1rem 0 0;
         }
+}
 
-        .helper {
-            opacity: 0;
-            font-size: rem(12);
-            @include transition( all 300ms ease-out );
-        }
+.fields-toggle-label {
+    cursor: pointer;
+    margin: 1rem 0;
+    &:before {
+        content: "Sign up for updates";
+    }
+    
+    &:hover {
+        color: black;
+    }
+    
+    [type="checkbox"]:checked + &:before {
+        content: "x Close";
+    }
+}
+.toggled-fields {
+    display: none;
+    [type="checkbox"]:checked ~ & {
+        display: block;
+        @include transition( all 300ms ease-out );
     }
 
 }
-
 
 // Colophon
 // ----------------------------//
