fix footer rearrange flex elements refs #66

--- a/assets/css/sass/blocks/_menu.scss
+++ b/assets/css/sass/blocks/_menu.scss
@@ -12,7 +12,9 @@
     }
 }
 .secondary-menu {
-    @extend .u-mt-3;
+    &.header-secondary-menu {
+        @extend .u-mt-3;
+    }
 }
 .menu-item {
     &.current-menu-item:after {
