--- a/assets/css/sass/views/_footer.scss
+++ b/assets/css/sass/views/_footer.scss
@@ -34,7 +34,8 @@
 }
 .footer__content {
     padding: 0 !important;
-    .flex__item {
+    @include flex-wrap( wrap );
+    & > .flex__item {
         padding-right: $flex-item-padding;
         @include media($lg) {
             padding-right: 2rem;
@@ -42,14 +43,32 @@
         @include media($xl) {
             padding-right: 5rem;
         }
-        flex: 1 1 flex-grid(6,$grid-columns);        
+    }
+}
+
+.footer__lower {
+    @include flex-wrap( wrap );
+
+    .flex__item {
+        @include flex( 0 0 100% );
+        @include media($lg) {
+            @include flex-basis( flex-grid(6,$grid-columns) );
+        }
+        &:not(:first-child) {
+            border-left: 0;
+            padding-left: 0;
+            @include media($lg) {
+                border-left: 1px solid;
+                padding-left: $flex-item-padding;
+            }
+        }
     }
 }
 
 .footer-colophon {
-    margin-top: 2rem;
+    @extend .u-mt-1;
     @include align-self(flex-end);
-    @include media(585px) {
+    @include media($lg) {
         margin-top: 0;
     }
 }
@@ -58,6 +77,8 @@
 // ----------------------------//
 .footer-social {
     @extend .secondary-menu;
+    @include align-self( flex-end );
+    @include flex-basis( 100% );
 }
 
 // Subscribe
